--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 attrdict==2.0.0
-numpy==1.14.5
-Pillow==6.2.0
+numpy==1.19.0
+Pillow==7.1.2
 pkg-resources==0.0.0
-six==1.11.0
-torch==0.4.0
-torchvision==0.2.1
-
-pip install sklearn
-pip install hdbscan
+six==1.15.0
+torch==1.5.0
+torchvision==0.6.0
+scikit-learn==0.21.3
