--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 attrdict==2.0.0
 numpy==1.19.0
 Pillow==7.1.2
-pkg-resources==0.0.0
 six==1.15.0
-torch==1.5.0
-torchvision==0.6.0
+torch===1.5.0  --find-links https://download.pytorch.org/whl/torch_stable.html
+torchvision===0.6.0  --find-links https://download.pytorch.org/whl/torch_stable.html
 scikit-learn==0.21.3
