--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ Pillow==7.1.2
 six==1.15.0
 torch===1.5.0  --find-links https://download.pytorch.org/whl/torch_stable.html
 torchvision===0.6.0  --find-links https://download.pytorch.org/whl/torch_stable.html
-scikit-learn==0.21.3
+scikit_learn==0.23.1
+hdbscan==0.8.26
+matplotlib==3.1.3
+seaborn==0.10.0
