--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ attrdict==2.0.0
 numpy==1.19.0
 Pillow==7.1.2
 six==1.15.0
-torch===1.5.0 torchvision===0.6.0 -f https://download.pytorch.org/whl/torch_stable.html
+torch==1.5.0 torchvision==0.6.0 -f https://download.pytorch.org/whl/torch_stable.html
 scikit_learn==0.23.1
 hdbscan==0.8.26
 matplotlib==3.1.3
