--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-attrdict
-numpy
-Pillow
-six
-
+attrdict==2.0.0
+numpy==1.19.0
+Pillow==7.1.2
+six==1.15.0
+torch===1.4.0+cu92  --find-links https://download.pytorch.org/whl/torch_stable.html
+torchvision===0.5.0+cu92  --find-links https://download.pytorch.org/whl/torch_stable.html
+scikit_learn==0.23.1
+matplotlib==3.1.3
