--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ attrdict==2.0.0
 numpy==1.19.0
 Pillow==7.1.2
 six==1.15.0
-torch===1.3.1  --find-links https://download.pytorch.org/whl/torch_stable.html
-torchvision===0.4.2  --find-links https://download.pytorch.org/whl/torch_stable.html
+torch===1.3.1 -f https://download.pytorch.org/whl/torch_stable.html
+torchvision===0.4.2 -f https://download.pytorch.org/whl/torch_stable.html
 scikit_learn==0.23.1
 matplotlib==3.1.3
