--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-attrdict==2.0.0
-numpy==1.19.0
-Pillow==7.1.2
-six==1.15.0
-torch===1.5.1 -f https://download.pytorch.org/whl/torch_stable.html
-torchvision===0.6.1 -f https://download.pytorch.org/whl/torch_stable.html
-scikit_learn==0.23.1
 matplotlib==3.1.3
+seaborn==0.10.0
+attrdict==2.0.0
+hdbscan==0.8.26
+numpy==1.19.0
+torch==1.3.1
+scikit_learn==0.23.1
