--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,42 @@
-matplotlib==3.1.3
-seaborn==0.10.0
-attrdict==2.0.0
-hdbscan==0.8.26
-numpy==1.19.0
-torch==1.3.1
-scikit_learn==0.23.1
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+blas=1.0=mkl
+ca-certificates=2020.6.20=hecda079_0
+certifi=2020.6.20=py37hc8dfbb8_0
+cpuonly=1.0=0
+csgan=0.1=pypi_0
+cudatoolkit=9.2=0
+freetype=2.10.2=hd328e21_0
+icc_rt=2019.0.0=h0cc432a_1
+intel-openmp=2020.1=216
+jpeg=9d=he774522_0
+libpng=1.6.37=hfe6a214_1
+libtiff=4.1.0=h885aae3_6
+lz4-c=1.9.2=h62dcd97_1
+mkl=2019.4=245
+mkl-service=2.3.0=py37hfa6e2cd_0
+mkl_fft=1.1.0=py37hc8d92b1_1
+mkl_random=1.1.0=py37he350917_0
+ninja=1.10.0=h1ad3211_0
+numpy=1.18.5=py37h6530119_0
+numpy-base=1.18.5=py37hc3f5095_0
+olefile=0.46=py_0
+openssl=1.1.1g=he774522_0
+pillow=7.2.0=py37hc826c6e_1
+pip=20.1.1=py_1
+python=3.7.7=h81c818b_4
+python_abi=3.7=1_cp37m
+pytorch=1.5.1=py3.7_cpu_0
+setuptools=49.2.0=py37hc8dfbb8_0
+six=1.15.0=pyh9f0ad1d_0
+sqlite=3.32.3=he774522_1
+tk=8.6.10=hfa6e2cd_0
+torchvision=0.6.1=py37_cpu
+vc=14.1=h869be7e_1
+vs2015_runtime=14.16.27012=h30e32a0_2
+wheel=0.34.2=py_1
+wincertstore=0.2=py37_1003
+xz=5.2.5=h62dcd97_1
+zlib=1.2.11=h2fa13f4_1006
+zstd=1.4.4=h9f78265_3
