--- a/requirements.txt
+++ b/requirements.txt
@@ -2,41 +2,35 @@
 # $ conda create --name <env> --file <this file>
 # platform: win-64
 blas=1.0=mkl
-ca-certificates=2020.6.20=hecda079_0
-certifi=2020.6.20=py37hc8dfbb8_0
-cpuonly=1.0=0
-csgan=0.1=pypi_0
-cudatoolkit=9.2=0
+certifi=2020.6.20=py37_0
+cudatoolkit=10.2.89=h74a9793_1
 freetype=2.10.2=hd328e21_0
 icc_rt=2019.0.0=h0cc432a_1
 intel-openmp=2020.1=216
-jpeg=9d=he774522_0
-libpng=1.6.37=hfe6a214_1
-libtiff=4.1.0=h885aae3_6
-lz4-c=1.9.2=h62dcd97_1
+jpeg=9b=hb83a4c4_2
+libpng=1.6.37=h2a8f88b_0
+libtiff=4.1.0=h56a325e_1
+lz4-c=1.9.2=h62dcd97_0
 mkl=2019.4=245
-mkl-service=2.3.0=py37hfa6e2cd_0
-mkl_fft=1.1.0=py37hc8d92b1_1
-mkl_random=1.1.0=py37he350917_0
-ninja=1.10.0=h1ad3211_0
-numpy=1.18.5=py37h6530119_0
-numpy-base=1.18.5=py37hc3f5095_0
-olefile=0.46=py_0
-openssl=1.1.1g=he774522_0
-pillow=7.2.0=py37hc826c6e_1
-pip=20.1.1=py_1
-python=3.7.7=h81c818b_4
-python_abi=3.7=1_cp37m
-pytorch=1.5.1=py3.7_cpu_0
-setuptools=49.2.0=py37hc8dfbb8_0
-six=1.15.0=pyh9f0ad1d_0
-sqlite=3.32.3=he774522_1
-tk=8.6.10=hfa6e2cd_0
-torchvision=0.6.1=py37_cpu
-vc=14.1=h869be7e_1
-vs2015_runtime=14.16.27012=h30e32a0_2
-wheel=0.34.2=py_1
-wincertstore=0.2=py37_1003
-xz=5.2.5=h62dcd97_1
-zlib=1.2.11=h2fa13f4_1006
-zstd=1.4.4=h9f78265_3
+mkl-service=2.3.0=py37hb782905_0
+mkl_fft=1.1.0=py37h45dec08_0
+mkl_random=1.1.0=py37h675688f_0
+ninja=1.9.0=py37h74a9793_0
+numpy=1.16.5=py37h19fb1c0_0
+numpy-base=1.16.5=py37hc3f5095_0
+olefile=0.46=py37_0
+pillow=7.2.0=py37hcc1f983_0
+pip=20.1.1=py37_1
+python=3.7.1=h33f27b4_4
+pytorch=1.5.1=py3.7_cuda102_cudnn7_0
+setuptools=49.1.0=py37_0
+six=1.15.0=py_0
+tk=8.6.10=he774522_0
+torchvision=0.6.1=py37_cu102
+vc=14.1=h0510ff6_4
+vs2015_runtime=14.16.27012=hf0eaf9b_3
+wheel=0.34.2=py37_0
+wincertstore=0.2=py37_0
+xz=5.2.5=h62dcd97_0
+zlib=1.2.11=h62dcd97_4
+zstd=1.4.4=ha9fde0e_3
