--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,4 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-blas=1.0=mkl
-certifi=2020.6.20=py37_0
-cudatoolkit=10.2.89=h74a9793_1
-freetype=2.10.2=hd328e21_0
-icc_rt=2019.0.0=h0cc432a_1
-intel-openmp=2020.1=216
-jpeg=9b=hb83a4c4_2
-libpng=1.6.37=h2a8f88b_0
-libtiff=4.1.0=h56a325e_1
-lz4-c=1.9.2=h62dcd97_0
-mkl=2019.4=245
-mkl-service=2.3.0=py37hb782905_0
-mkl_fft=1.1.0=py37h45dec08_0
-mkl_random=1.1.0=py37h675688f_0
-ninja=1.9.0=py37h74a9793_0
-numpy=1.16.5=py37h19fb1c0_0
-numpy-base=1.16.5=py37hc3f5095_0
-olefile=0.46=py37_0
-pillow=7.2.0=py37hcc1f983_0
-pip=20.1.1=py37_1
-python=3.7.1=h33f27b4_4
-pytorch=1.5.1=py3.7_cuda102_cudnn7_0
-setuptools=49.1.0=py37_0
-six=1.15.0=py_0
-tk=8.6.10=he774522_0
-torchvision=0.6.1=py37_cu102
-vc=14.1=h0510ff6_4
-vs2015_runtime=14.16.27012=hf0eaf9b_3
-wheel=0.34.2=py37_0
-wincertstore=0.2=py37_0
-xz=5.2.5=h62dcd97_0
-zlib=1.2.11=h62dcd97_4
-zstd=1.4.4=ha9fde0e_3
+attrdict==2.0.0
+numpy==1.16.4
+torch===1.2.0 -f https://download.pytorch.org/whl/torch_stable.html
+torchvision===0.4.0 -f https://download.pytorch.org/whl/torch_stable.html
