master: update requirements.txt file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 attrdict==2.0.0
-numpy==1.16.4
-torch===1.2.0 -f https://download.pytorch.org/whl/torch_stable.html
-torchvision===0.4.0 -f https://download.pytorch.org/whl/torch_stable.html
+numpy==1.14.5
+torch===1.5.0 -f https://download.pytorch.org/whl/torch_stable.html
+torchvision===0.6.0 -f https://download.pytorch.org/whl/torch_stable.html
+Pillow==7.2.0
